# GDVoxel

./: ChunkRemover.gd  GDVoxel.gdextension  Hack-Regular.ttf.import  HdrSkyCloudy004_HDR_HIRES.exr.import  README.md  VoxelChunk.gd  camera.gd  debug_draw.gd  export_presets.cfg  icon.svg.import  main.tscn  project.godot  terrain.gdshader  terrain.tres  voxel_chunk.gd  voxel_chunk.tscn
Player/: MovementController.gd
Stylized_Dry_Mud_001_SD/: Stylized_Dry_Mud_001_ambientOcclusion.jpg.import  Stylized_Dry_Mud_001_basecolor.jpg.import  Stylized_Dry_Mud_001_height.png.import  Stylized_Dry_Mud_001_normal.jpg.import  Stylized_Dry_Mud_001_roughness.jpg.import
Stylized_Grass_003_SD/: Stylized_Grass_003_ambientOcclusion.jpg.import  Stylized_Grass_003_basecolor.jpg.import  Stylized_Grass_003_height.png.import  Stylized_Grass_003_normal.jpg.import  Stylized_Grass_003_roughness.jpg.import
gdvoxel/: Cargo.toml  run.sh
gdvoxel/src/: chunk.rs  gpu.rs  lib.rs  manager.rs  noise.wgsl  threaded_generator.rs
