[package]
name = "gdvoxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fast-surface-nets = "0.2.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
isosurface = "0.0.4"
ndshape = "0.3.0"
rand = "0.8.5"
rayon = "1.7.0"
tri-mesh = "0.6.0"
