[package]
name = "gdvoxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fast-surface-nets = "0.2.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}
isosurface = "0.0.4"
moka = {version = "0.12.0-beta.2", features = ["sync"]}
ndshape = "0.3.0"
noise = "0.8.2"
priority-queue = "1.3.2"
rand = "0.8.5"
splines = "4.2.0"
tokio = {version = "1.32.0", features=["rt-multi-thread", "macros"]}
tri-mesh = "0.6.0"
